--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "8daf6fe8-b0eb-451e-8c22-39fe63d9cbc7",
   "name": "Pruebas",
-  "publisher": "Default Publisher",
+  "publisher": "AMM",
   "version": "1.0.0.0",
   "brief": "",
   "description": "",
@@ -16,8 +16,8 @@
   "application": "26.0.0.0",
   "idRanges": [
     {
-      "from": 50100,
-      "to": 50149
+      "from": 51149,
+      "to": 51199
     }
   ],
   "resourceExposurePolicy": {
